# etl

./: .env.example  .gitignore  AGENTIC_ARCHITECTURE.md  BACKLOG.md  CD_BALANCE_INSTRUCTIONS.md  Dockerfile.example  Dockerfile.openclaw-gateway  INSTALL_POPPLER.md  MORTGAGE_ARCHITECTURE.md  README.md  STATEMENTS_ARCHIVE_LAYOUT.md  add_cds_to_ledger.py  add_heloc_to_ledger.py  add_home_value.py  add_mortgage_to_ledger.py  analyze_assets.py  analyze_expenses.py  analyze_income.py  analyze_income_sources.py  build_ledger.py  check_database_location.py  checking_statement_example.tsv  circle_distribution.py  create_tables.py  docker-compose.openclaw.yml  docker-compose.yml  docker-compose.yml.example  extract_heloc_to_csv.py  finance_agent.py  golden_mandelbrot.py  import_tsv.py  ledger.py  main.py  process_archive.py  pyproject.toml  rebuild_ledger.py  reconcile_accounts.py  requirements.txt  reset_postgres_password.ps1  run_validations.py  (+12 more)
.github/workflows/: python_package.yml
finance_app/: __init__.py
finance_app/agents/: __init__.py  analyzer.py  validation_routines.py
finance_app/agents/analysis/: __init__.py  file_analyzer.py
finance_app/agents/data_curation/: __init__.py  archive_scanner.py  cd_processor.py  cleansing.py  deduplication.py  ingestion.py  pipeline_orchestrator.py  (+1 more)
finance_app/database/: __init__.py  connection.py  models.py  schema.py
finance_app/importers/: __init__.py  balances_importer.py  ledger_csv_importer.py  tsv_importer.py
finance_app/mcp/: __init__.py  runtime.py  server.py  subprocess_runners.py
finance_app/models/: __init__.py  account.py  common.py  transaction.py
finance_app/statements/: __init__.py  redaction.py
finance_app/tooling/: __init__.py  scripts_catalog.py
openclaw_workspace/: FINANCE_TOOLS.md
scripts/: finance_overview.py  finance_overview_gateway.sh  import_archive_ledger.py  init_local_db.sh  mcp_finance_server.py  openclaw_agent_exec_test.sh  openclaw_docker_setup.sh  openclaw_exec_probe.sh  openclaw_finance_repl.sh  openclaw_print_turn.py  register_openclaw_mcp_finance.sh  seed_sandbox.py
staging/: .gitkeep
(+7 files in other folders)
